# tesslocate

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  main.cpp  tesslocate-macos-arm64  vcpkg.json
.github/workflows/: build.yml  build_linux.yml  build_mac.yml  release.yml
docker/: linux.Dockerfile
openmp/lib/: libomp.dylib
